--- a/nginx.conf
+++ b/nginx.conf
@@ -1,1 +1,42 @@
 
+worker_processes auto;
+
+events {
+    worker_connections      512;
+}
+
+http {
+    include                 /etc/nginx/mime.types;
+
+    upstream sports-location-tracker {
+        server              slt_webapp:1080;     # hostname and port for the sports location tracker container
+    }
+
+    server {
+        listen              80;
+        server_name         localhost;
+
+        # Security headers
+        add_header Strict-Transport-Security    "max-age=31536000; includeSubDomains" always;
+        add_header X-Frame-Options              SAMEORIGIN;
+        add_header X-Content-Type-Options       nosniff;
+        add_header X-XSS-Protection             "1; mode=block";
+
+        location /stg/sports-location-tracker {
+            proxy_pass          http://sports-location-tracker;
+
+            proxy_set_header    Host               $host;
+            proxy_set_header    X-Real-IP          $remote_addr;
+            proxy_set_header    X-Forwarded-Host   $host;
+            proxy_set_header    X-Forwarded-Port   $server_port;
+            proxy_set_header    X-Forwarded-Proto  $scheme;
+            proxy_set_header    X-Forwarded-For    $proxy_add_x_forwarded_for;
+        }
+
+        location / {
+            root            /;
+            index           index.html;
+            try_files       $uri $uri/ /index.html =404;
+        }
+    }
+}
