--- a/nginx.conf
+++ b/nginx.conf
@@ -9,7 +9,7 @@ http {
     include                 /etc/nginx/mime.types;
 
     upstream sports-location-tracker {
-        server              slt_webapp:1080;     # hostname and port for the sports location tracker container
+        server              slt_webapp_stg:81;     # hostname and port for the sports location tracker container
     }
 
     server {
