--- a/.github/workflows/update-nginx.yml
+++ b/.github/workflows/update-nginx.yml
@@ -13,5 +13,9 @@ jobs:
         uses: actions/checkout@v3
       - name: Build and start nginx container
         run: |
-          docker build -t nginx -f nginx.Dockerfile .
-          docker run -d --network=sports-location-tracker_stg -p 80:80 nginx
+          docker build -t nginx_own -f nginx.Dockerfile .
+          docker run -d \
+            --restart=always \
+            --network=sports-location-tracker_stg \
+            -p 80:80 \
+            nginx_own:latest
