--- a/.github/workflows/update-nginx.yml
+++ b/.github/workflows/update-nginx.yml
@@ -14,7 +14,10 @@ jobs:
       - name: Build and start nginx container
         run: |
           docker build -t nginx_own -f nginx.Dockerfile .
+          docker stop nginx
+          docker rm nginx
           docker run -d \
+            --name=nginx
             --restart=always \
             --network=sports-location-tracker_stg \
             -p 80:80 \
