CICD-35 Fix MIME type issue

--- a/nginx.conf
+++ b/nginx.conf
@@ -24,6 +24,8 @@ http {
 
         location /stg/sports-location-tracker {
             proxy_pass          http://sports-location-tracker;
+            
+            default_type        text/html;
 
             proxy_set_header    Host               $host;
             proxy_set_header    X-Real-IP          $remote_addr;
