CICD-32 Add datavarasto upstream

--- a/nginx.conf
+++ b/nginx.conf
@@ -12,6 +12,10 @@ http {
         server              slt_webapp_stg:81;     # hostname and port for the sports location tracker container
     }
 
+    upstream datavarasto {
+        server              slt_webapp_stg:81;     # hostname and port for the sports location tracker container
+    }
+
     server {
         listen              80;
         server_name         localhost;
@@ -36,6 +40,19 @@ http {
             proxy_set_header    X-Forwarded-For    $proxy_add_x_forwarded_for;
 
             proxy_pass          http://sports-location-tracker/;
+        }
+
+        location /stg/datavarasto {                        
+            rewrite /stg/datavarasto(.*) /$1  break;
+
+            proxy_set_header    Host               $host;
+            proxy_set_header    X-Real-IP          $remote_addr;
+            proxy_set_header    X-Forwarded-Host   $host;
+            proxy_set_header    X-Forwarded-Port   $server_port;
+            proxy_set_header    X-Forwarded-Proto  $scheme;
+            proxy_set_header    X-Forwarded-For    $proxy_add_x_forwarded_for;
+
+            proxy_pass          http://datavarasto/;
         }
 
         location / {
