CICD-32 Fix nginx

--- a/nginx.conf
+++ b/nginx.conf
@@ -13,7 +13,7 @@ http {
     }
 
     upstream datavarasto {
-        server              slt_webapp_stg:81;     # hostname and port for the sports location tracker container
+        server              ui-1_stg:4200;     # hostname and port for the sports location tracker container
     }
 
     server {
