CICD-32 Connect nginx container to datavarasto stg network

--- a/.github/workflows/update-nginx.yml
+++ b/.github/workflows/update-nginx.yml
@@ -21,3 +21,4 @@ jobs:
             --network=sports-location-tracker_stg \
             -p 80:80 \
             nginx_own:latest
+          docker network connect datavarasto_stg nginx
