--- a/nginx.conf
+++ b/nginx.conf
@@ -26,33 +26,24 @@ http {
         add_header X-Content-Type-Options       nosniff;
         add_header X-XSS-Protection             "1; mode=block";
 
+        proxy_set_header    Host               $host;
+        proxy_set_header    X-Real-IP          $remote_addr;
+        proxy_set_header    X-Forwarded-Host   $host;
+        proxy_set_header    X-Forwarded-Port   $server_port;
+        proxy_set_header    X-Forwarded-Proto  $scheme;
+        proxy_set_header    X-Forwarded-For    $proxy_add_x_forwarded_for;
+
         location /stg/sports-location-tracker {                        
             # remove "/stg/sports-location-tracker" part from the request before it hits the sports-location-tracker nginx web server
             # this is so we don't need to touch the sports-location-tracker nginx paths, 
             # and also so the folder path will be correct for webpack generated "js" and "css" files, when "location /" block gets hit and it tries to find the files
             rewrite /stg/sports-location-tracker(.*) /$1  break;
-
-            proxy_set_header    Host               $host;
-            proxy_set_header    X-Real-IP          $remote_addr;
-            proxy_set_header    X-Forwarded-Host   $host;
-            proxy_set_header    X-Forwarded-Port   $server_port;
-            proxy_set_header    X-Forwarded-Proto  $scheme;
-            proxy_set_header    X-Forwarded-For    $proxy_add_x_forwarded_for;
-
-            proxy_pass          http://sports-location-tracker/;
+            proxy_pass          http://sports-location-tracker;
         }
 
-        location /stg/datavarasto {                        
+        location /stg/datavarasto {                       
             rewrite /stg/datavarasto(.*) /$1  break;
-
-            proxy_set_header    Host               $host;
-            proxy_set_header    X-Real-IP          $remote_addr;
-            proxy_set_header    X-Forwarded-Host   $host;
-            proxy_set_header    X-Forwarded-Port   $server_port;
-            proxy_set_header    X-Forwarded-Proto  $scheme;
-            proxy_set_header    X-Forwarded-For    $proxy_add_x_forwarded_for;
-
-            proxy_pass          http://datavarasto/;
+            proxy_pass          http://datavarasto;
         }
 
         location / {
