Add debug logging

--- a/nginx.conf
+++ b/nginx.conf
@@ -7,6 +7,9 @@ events {
 
 http {
     include             /etc/nginx/mime.types;
+
+    rewrite_log on;
+    error_log   /var/log/nginx/error.log debug;
     
     upstream sports-location-tracker {
         server              slt_webapp_stg:81;     # hostname and port for the sports location tracker container
