Remove extra slash from rewrites

--- a/nginx.conf
+++ b/nginx.conf
@@ -40,12 +40,12 @@ http {
             # remove "/stg/sports-location-tracker" part from the request before it hits the sports-location-tracker nginx web server
             # this is so we don't need to touch the sports-location-tracker nginx paths, 
             # and also so the folder path will be correct for webpack generated "js" and "css" files, when "location /" block gets hit and it tries to find the files
-            rewrite /stg/sports-location-tracker(.*) /$1  break;
+            rewrite /stg/sports-location-tracker/(.*) /$1  break;
             proxy_pass          http://sports-location-tracker;
         }
 
         location /stg/datavarasto {                       
-            rewrite /stg/datavarasto(.*) /$1  break;
+            rewrite /stg/datavarasto/(.*) /$1  break;
             proxy_pass          http://datavarasto;
         }
 
