CICD-40 Add proxies for PRD environments

--- a/nginx.conf
+++ b/nginx.conf
@@ -6,17 +6,25 @@ events {
 }
 
 http {
-    include             /etc/nginx/mime.types;
+    include                 /etc/nginx/mime.types;
 
     rewrite_log on;
-    error_log   /var/log/nginx/error.log debug;
+    error_log               /var/log/nginx/error.log debug;
     
-    upstream sports-location-tracker {
+    upstream sports-location-tracker-stg {
         server              slt_webapp_stg:81;     # hostname and port for the sports location tracker container
     }
 
-    upstream datavarasto {
+    upstream sports-location-tracker-prd {
+        server              slt_webapp_prd:81;     # hostname and port for the sports location tracker container
+    }
+
+    upstream datavarasto-stg {
         server              ui-1_stg:4200;
+    }
+
+    upstream datavarasto-prd {
+        server              ui-1_prd:4200;
     }
 
     server {
@@ -29,24 +37,35 @@ http {
         add_header X-Content-Type-Options       nosniff;
         add_header X-XSS-Protection             "1; mode=block";
 
-        proxy_set_header    Host               $host;
-        proxy_set_header    X-Real-IP          $remote_addr;
-        proxy_set_header    X-Forwarded-Host   $host;
-        proxy_set_header    X-Forwarded-Port   $server_port;
-        proxy_set_header    X-Forwarded-Proto  $scheme;
-        proxy_set_header    X-Forwarded-For    $proxy_add_x_forwarded_for;
+        proxy_set_header    Host                $host;
+        proxy_set_header    X-Real-IP           $remote_addr;
+        proxy_set_header    X-Forwarded-Host    $host;
+        proxy_set_header    X-Forwarded-Port    $server_port;
+        proxy_set_header    X-Forwarded-Proto   $scheme;
+        proxy_set_header    X-Forwarded-For     $proxy_add_x_forwarded_for;
 
         location /stg/sports-location-tracker {                        
             # remove "/stg/sports-location-tracker" part from the request before it hits the sports-location-tracker nginx web server
             # this is so we don't need to touch the sports-location-tracker nginx paths, 
             # and also so the folder path will be correct for webpack generated "js" and "css" files, when "location /" block gets hit and it tries to find the files
             rewrite /stg/sports-location-tracker/(.*) /$1  break;
-            proxy_pass          http://sports-location-tracker;
+            proxy_pass      http://sports-location-tracker-stg;
         }
+
+        location /prd/sports-location-tracker {                        
+            rewrite /prd/sports-location-tracker/(.*) /$1  break;
+            proxy_pass      http://sports-location-tracker-prd;
+        }
+
 
         location /stg/datavarasto {                       
             rewrite /stg/datavarasto/(.*) /$1  break;
-            proxy_pass          http://datavarasto;
+            proxy_pass      http://datavarasto-stg;
+        }
+
+        location /prd/datavarasto {                       
+            rewrite /prd/datavarasto/(.*) /$1  break;
+            proxy_pass      http://datavarasto-prd;
         }
 
         location / {
