Temporarily disable PRD env for sports location tracker

--- a/nginx.conf
+++ b/nginx.conf
@@ -15,9 +15,9 @@ http {
         server              slt_webapp_stg:81;     # hostname and port for the sports location tracker container
     }
 
-    upstream sports-location-tracker-prd {
-        server              slt_webapp_prd:81;     # hostname and port for the sports location tracker container
-    }
+    #upstream sports-location-tracker-prd {
+    #    server              slt_webapp_prd:81;
+    #}
 
     upstream datavarasto-stg {
         server              ui-1_stg:4200;
@@ -52,10 +52,10 @@ http {
             proxy_pass      http://sports-location-tracker-stg;
         }
 
-        location /prd/sports-location-tracker {                        
-            rewrite /prd/sports-location-tracker/(.*) /$1  break;
-            proxy_pass      http://sports-location-tracker-prd;
-        }
+        #location /prd/sports-location-tracker {                        
+        #    rewrite /prd/sports-location-tracker/(.*) /$1  break;
+        #    proxy_pass      http://sports-location-tracker-prd;
+        #}
 
 
         location /stg/datavarasto {                       
