Connect to docker "datavarasto_prd" network

--- a/.github/workflows/update-nginx.yml
+++ b/.github/workflows/update-nginx.yml
@@ -22,3 +22,4 @@ jobs:
             nginx_own:latest
           docker network connect sports-location-tracker_stg nginx
           docker network connect datavarasto_stg nginx
+          docker network connect datavarasto_prd nginx
