--- a/nginx.conf
+++ b/nginx.conf
@@ -23,9 +23,9 @@ http {
         server              ui-1_stg:4200;
     }
 
-    #upstream datavarasto-prd {
-    #    server              ui-1_prd:4200;
-    #}
+    upstream datavarasto-prd {
+        server              ui-1_prd:4200;
+    }
 
     server {
         listen              80;
@@ -63,10 +63,10 @@ http {
             proxy_pass      http://datavarasto-stg;
         }
 
-        #location /prd/datavarasto {                       
-        #    rewrite /prd/datavarasto/(.*) /$1  break;
-        #    proxy_pass      http://datavarasto-prd;
-        #}
+        location /prd/datavarasto {                       
+            rewrite /prd/datavarasto/(.*) /$1  break;
+            proxy_pass      http://datavarasto-prd;
+        }
 
         location / {
             root            /usr/share/nginx/html;
