--- a/nginx.conf
+++ b/nginx.conf
@@ -16,7 +16,7 @@ http {
     }
 
     upstream sports-location-tracker-prd {
-        server              slt_webapp_prd:81;     # hostname and port for the sports location tracker container
+        server              slt_webapp_prd:81;
     }
 
     upstream datavarasto-stg {
